@@ -1,3 +1,7 @@
+2008-02-03  Benjamin Mack  <mack@xnos.org>
+
+	* Fixed #7361: Overhauled User setup module. Now has tabs and better usability
+
 2008-02-03  Michael Stucki  <michael@typo3.org>
 
 	* Reverted feature #7337 because it is faulty and lacks proper documentation
